[package]
name = "rio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"

[lib]
name = "rio"
path = "src/lib.rs"

[[bin]]
name = "simple"
path = "examples/simple.rs"
test = false
doctest = false
bench = false
doc = false

